Reset toolbar style when exiting tab fullscreen mode

On Mac, tab fullscreen mode doesn't show top UI while browser fullscreen
mode may show top UI depending on user's preference. When Chrome exits
from tab fullscreen, it needs to reset the top UI style to the one
corresponding to browser fullscreen. In addition, if it exits from tab
fullscreen to browser fullscreen, a re-layout may be triggered if top
UI needs to be shown.

This CL fixes the problem by calling UpdateUIForTabFullscreen() when
Chrome exits tab fullscreen, no matter it is going back to browser
fullscreen mode or normal state. So it can update the top UI status
correctly.

This CL also adds reading initial toolbar style value from user
preference.

BUG=879158

Change-Id: I3f2742cad2107667c562701a981f3240f29538bf
Reviewed-on: https://chromium-review.googlesource.com/1208721
Reviewed-by: Sidney San Martín <sdy@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Wei Li <weili@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589359}
Former-commit-id: 2f4ae42d444d85d4d61f6640a83008ad22cded3c