chrome/browser/ui/views/frame/browser_non_client_frame_view_mac.mm
@@ -22,6 +22,15 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ui/base/theme_provider.h"
 #include "ui/gfx/canvas.h"
 
+namespace {
+FullscreenToolbarStyle GetUserPreferredToolbarStyle(
+    const PrefService* pref_service) {
+  return pref_service->GetBoolean(prefs::kShowFullscreenToolbar)
+             ? FullscreenToolbarStyle::TOOLBAR_PRESENT
+             : FullscreenToolbarStyle::TOOLBAR_HIDDEN;
+}
+}
+
 ///////////////////////////////////////////////////////////////////////////////
 // BrowserNonClientFrameViewMac, public:
 
@@ -31,8 +40,11 @@ BrowserNonClientFrameViewMac::BrowserNonClientFrameViewMac(
     : BrowserNonClientFrameView(frame, browser_view) {
   fullscreen_toolbar_controller_.reset([[FullscreenToolbarControllerViews alloc]
       initWithBrowserView:browser_view]);
+  PrefService* pref_service = browser_view->GetProfile()->GetPrefs();
+  [fullscreen_toolbar_controller_
+      setToolbarStyle:GetUserPreferredToolbarStyle(pref_service)];
 
-  pref_registrar_.Init(browser_view->GetProfile()->GetPrefs());
+  pref_registrar_.Init(pref_service);
   pref_registrar_.Add(
       prefs::kShowFullscreenToolbar,
       base::BindRepeating(&BrowserNonClientFrameViewMac::UpdateFullscreenTopUI,
@@ -139,24 +151,24 @@ void BrowserNonClientFrameViewMac::UpdateFullscreenTopUI(
       !is_exiting_fullscreen) {
     new_style = FullscreenToolbarStyle::TOOLBAR_NONE;
   } else {
-    PrefService* prefs = browser_view()->GetProfile()->GetPrefs();
-    new_style = prefs->GetBoolean(prefs::kShowFullscreenToolbar)
-                    ? FullscreenToolbarStyle::TOOLBAR_PRESENT
-                    : FullscreenToolbarStyle::TOOLBAR_HIDDEN;
+    new_style =
+        GetUserPreferredToolbarStyle(browser_view()->GetProfile()->GetPrefs());
   }
   [fullscreen_toolbar_controller_ setToolbarStyle:new_style];
 
-  if (old_style != new_style) {
-    // Notify browser that top ui state has been changed so that we can update
-    // the bookmark bar state as well.
-    browser_view()->browser()->FullscreenTopUIStateChanged();
+  if (![fullscreen_toolbar_controller_ isInFullscreen] ||
+      old_style == new_style)
+    return;
 
-    // Re-layout if toolbar style changes in fullscreen mode.
-    if (frame()->IsFullscreen())
-      browser_view()->Layout();
+  // Notify browser that top ui state has been changed so that we can update
+  // the bookmark bar state as well.
+  browser_view()->browser()->FullscreenTopUIStateChanged();
 
-    [FullscreenToolbarController recordToolbarStyle:new_style];
-  }
+  // Re-layout if toolbar style changes in fullscreen mode.
+  if (frame()->IsFullscreen())
+    browser_view()->Layout();
+
+  [FullscreenToolbarController recordToolbarStyle:new_style];
 }
 
 bool BrowserNonClientFrameViewMac::ShouldHideTopUIForFullscreen() const {
